Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/DefiniteAssignment/T4717165.out
T4717165.java:18:9: compiler.err.unreachable.stmt
1 error
